<resources>
    <string name="app_name">AgoraCallDemo</string>
    <string name="setup_title">云信信令 + 声网 RTC</string>
    <string name="setup_description">两台设备使用不同云信账号登录，输入对方账号即可呼叫。声网频道由 core 自动创建。</string>
    <string name="local_account_hint">本机云信账号 ID</string>
    <string name="yunxin_token_hint">本机云信账号 Token</string>
    <string name="peer_account_hint">对方云信账号 ID</string>
    <string name="uid_hint">UID（0 表示自动分配）</string>
    <string name="login_yunxin">登录云信</string>
    <string name="logout_yunxin">退出</string>
    <string name="start_call">发起呼叫</string>
    <string name="calling_peer">正在呼叫对方</string>
    <string name="incoming_call">收到云信来电</string>
    <string name="accept_call">接听</string>
    <string name="reject_call">拒绝</string>
    <string name="cancel_call">取消呼叫</string>
    <string name="video_call">开启视频（不勾选则为纯语音）</string>
    <string name="join_channel">加入频道</string>
    <string name="leave_channel">挂断</string>
    <string name="mic_on">麦克风开</string>
    <string name="mic_off">麦克风关</string>
    <string name="camera_on">摄像头开</string>
    <string name="camera_off">摄像头关</string>
    <string name="switch_camera">切换镜头</string>
    <string name="speaker_on">扬声器开</string>
    <string name="speaker_off">扬声器关</string>
    <string name="status_idle">请先登录云信账号</string>
    <string name="video_waiting_hint">等待远端视频</string>
    <string name="audio_call_hint">纯语音通话中</string>
    <string name="call_in_progress">通话中</string>
    <string name="token_demo_warning">云信账号 Token 应由业务服务端提供；声网 App Certificate 和本地 Token Builder 也仅限 Demo。</string>
    <string name="permission_denied">请授予麦克风和摄像头权限后重试</string>
    <string name="invalid_uid">UID 请输入 0～2147483647 的整数</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>
